--- a/shag_uds.Rmd
+++ b/shag_uds.Rmd
@@ -39,14 +39,20 @@ scot<-scot %>% st_set_crs(27700) #it is in bng
 
 #For on laptop Inne
 #scot<-st_read("scotcoast.shp")
+pobox<-st_read("Tidal_PO_final.shp")
+meygen<-st_read("meygen.shp")
 shagnest<-st_point(c(336215, 977686))
 shagnest.sf<-st_sfc(x=shagnest)
 
 shagnest.sf<-shagnest.sf %>% st_set_crs(27700)
 st_crs(shagnest.sf)
+
+pobox_wgs84<-st_transform(pobox, "+proj=longlat +datum=WGS84")
+meygen_wgs84<-st_transform(meygen, "+proj=longlat +datum=WGS84")
 #For both
 scot_wgs84 <- st_transform(scot, "+proj=longlat +datum=WGS84") #transform to wgs84
 shagnest_wgs84.sf<- st_transform(shagnest.sf,"+proj=longlat +datum=WGS84")
+
 ```
 
 Now the track has been prepared and processed to only include foraging locations (positions at which the shag is either on the sea surface or below). This is where spatial overlap with either floating mooring or rotating blades of tidal-stream turbines is possible. The next step is extract the utilization distribution (UD) from this track, effectively transforming the point data into a volume. As the length of the track is short (<48 hrs), the UD will be one of occurrence as opposed to a home range [@Worton1989; @Ford1979]. As the track is autocorrelated in time and space [@Fleming2015; @Noonan2019], the biased random bridge method implemented in the adehabitatHR package was applied [@Calenge2006]. Where data are taken to be representative of the individual’s use of the space over a longer timespan (e.g. an entire breeding season), a home range estimator such as auto-correlated kernel density estimation may be applied instead, implemented in the 'ctmm' package [@Fleming2017; @Calabrese2016]. 
@@ -236,13 +242,16 @@ bbox_shag[1] <- -3.15
 bbox_shag[3] <- -2.82
 bbox_shag[2] <- 58.63
 bbox_shag[4] <- 58.70
+```
 
-#plotting the map
-UDplot.tm<-tm_shape(shagnest_buffer)+tm_borders(lty=2,col="blue")+tm_shape(scot_wgs84,bbox=bbox_shag)+tm_polygons()+tm_shape(eush616_ud95)+tm_fill(col="orange")+tm_scale_bar(position=c("LEFT","BOTTOM"))+tm_grid(n.x=3,n.y=4,lines=F,labels.cardinal=T)+tm_add_legend(type="symbol",col="#006428",labels="Nest site")+tm_shape(shagnest_wgs84.sf)+tm_dots(size=0.5,col="#006428")+tm_credits("Contains data from https://www.mdpi.com/2077-1312/9/3/263#supplementary\nContains Ordnance Survey data © Crown copyright and database right",position=c("LEFT","BOTTOM"),size=0.4)+tm_add_legend(type="line",col="blue",labels="Foraging radius")+tm_add_legend(type="fill",col="orange",labels="Unsuitable for \ntidal development",border.col=NA)+tm_layout(legend.position=c("right","bottom"),legend.text.size=0.6,legend.height = -0.15,legend.bg.color="white",legend.frame="black")
+final plot
+
+```{r plotting final map}
+UDplot.tm<-tm_shape(shagnest_buffer)+tm_borders(lty=2,col="blue")+tm_shape(scot_wgs84,bbox=bbox_shag)+tm_polygons()+tm_shape(eush616_ud95)+tm_fill(col="orange")+tm_scale_bar(position=c("LEFT","BOTTOM"))+tm_grid(n.x=3,n.y=4,lines=F,labels.cardinal=T)+tm_add_legend(type="symbol",col="#006428",labels="Nest site")+tm_shape(pobox_wgs84)+tm_borders(col="red")+tm_shape(shagnest_wgs84.sf)+tm_dots(size=0.5,col="#006428")+tm_credits("Contains data from https://www.mdpi.com/2077-1312/9/3/263#supplementary\nContains Ordnance Survey data © Crown copyright and database right",position=c("LEFT","BOTTOM"),size=0.4)+tm_add_legend(type="line",col="blue",labels="Foraging radius")+tm_add_legend(type="fill",col="orange",labels="Unsuitable for \ndevelopment",border.col=NA)+tm_layout(legend.position=c("right","bottom"),legend.text.size=0.6,legend.height = -0.24,legend.bg.color="white",legend.frame="black")+tm_add_legend(type="line",col="red",labels="Plan Option boundary")+tm_shape(meygen_wgs84)+tm_borders(col="purple")+tm_add_legend(type="line",col="purple",labels="Active lease")
 UDplot.tm
 tmap_save(UDplot.tm,"UDplot.png")
 ```
-
+Let's see
 ```{r map viewing}
 #for viewing
 tmap_mode("view")
